--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.lihuanyu.Gomoku.MyFrame
+main.class=Gomoku.MyFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
